--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -18,65 +18,66 @@
         android:id="@+id/editText_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageView"
+        android:layout_marginLeft="59dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="44dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="216dp"
-        android:layout_marginTop="44dp"
-        android:layout_below="@+id/imageView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="59dp"
-        android:layout_marginStart="59dp" />
+        tools:layout_editor_absoluteY="216dp"/>
 
     <EditText
         android:id="@+id/editText_genus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText_name"
+        android:layout_alignStart="@+id/editText_name"
+        android:layout_below="@+id/editText_name"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Genus"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="259dp"
-        android:layout_below="@+id/editText_name"
-        android:layout_alignLeft="@+id/editText_name"
-        android:layout_alignStart="@+id/editText_name" />
+        tools:layout_editor_absoluteY="259dp"/>
 
     <EditText
         android:id="@+id/editText_taxonomy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText_genus"
+        android:layout_alignStart="@+id/editText_genus"
+        android:layout_below="@+id/editText_genus"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Taxonomy"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="311dp"
-        android:layout_below="@+id/editText_genus"
-        android:layout_alignLeft="@+id/editText_genus"
-        android:layout_alignStart="@+id/editText_genus" />
+        tools:layout_editor_absoluteY="311dp"/>
 
     <Button
         android:id="@+id/button_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="419dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="41dp" />
+        android:layout_marginBottom="41dp"
+        android:text="add"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="419dp"/>
 
     <EditText
         android:id="@+id/editText_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText_taxonomy"
+        android:layout_alignStart="@+id/editText_taxonomy"
+        android:layout_below="@+id/editText_taxonomy"
         android:ems="10"
         android:inputType="textPersonName"
+        android:minLines="3"
         android:text="Description"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="364dp"
-        android:layout_below="@+id/editText_taxonomy"
-        android:layout_alignLeft="@+id/editText_taxonomy"
-        android:layout_alignStart="@+id/editText_taxonomy" />
+        tools:layout_editor_absoluteY="364dp"/>
 </RelativeLayout>
