--- a/app/src/main/res/layout/activity_list_of_plants.xml
+++ b/app/src/main/res/layout/activity_list_of_plants.xml
@@ -21,11 +21,12 @@
         tools:layout_editor_absoluteY="-4dp"/>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="8dp"/>
+        tools:layout_editor_absoluteY="8dp" />
 
 </LinearLayout>
