--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
@@ -7,18 +7,24 @@
                                              tools:context="com.example.dara.wikiplant.MainMenuActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_list"
         android:layout_width="333dp"
         android:layout_height="42dp"
         android:text="List"
         tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="190dp" />
+        tools:layout_editor_absoluteY="190dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="215dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_scan"
         android:layout_width="333dp"
         android:layout_height="42dp"
         android:text="Scan"
         tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="113dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteY="113dp"
+        android:layout_marginBottom="47dp"
+        android:layout_above="@+id/button_list"
+        android:layout_alignStart="@+id/button_list" />
+</RelativeLayout>
