--- a/app/src/main/res/layout/item_plant.xml
+++ b/app/src/main/res/layout/item_plant.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:tools="http://schemas.android.com/tools"
+                                    android:id="@+id/cv"
                                     android:layout_width="match_parent"
                                     android:layout_height="340dp"
                                     android:orientation="vertical">
@@ -23,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:id="@+id/textView_name"
             android:layout_marginTop="8dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
             tools:text="Sunflower"
@@ -31,6 +33,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/textView_description"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
