--- a/app/src/main/res/layout/item_plant.xml
+++ b/app/src/main/res/layout/item_plant.xml
@@ -15,6 +15,7 @@
 
         <ImageView
             android:layout_width="match_parent"
+            android:id="@+id/imageView"
             android:layout_height="200dp"
             android:layout_marginBottom="8dp"
             tools:src="@color/colorPrimaryDark"
