--- a/app/src/main/res/layout/item_gallery_image.xml
+++ b/app/src/main/res/layout/item_gallery_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gallery_image_thumb"
-           android:layout_width="wrap_content"
+           android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical">
 
