--- a/app/src/main/res/layout/activity_single_plant.xml
+++ b/app/src/main/res/layout/activity_single_plant.xml
@@ -68,16 +68,26 @@
         android:layout_marginTop="0dp"
         android:text="User"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>
-    <EditText
-        android:id="@+id/textView_nearest_location"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="0dp"
-        android:text="Location"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>
 
-    <Button
+        <EditText
+            android:id="@+id/text_view_latitude"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="0dp"
+            android:text="Location"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>
+
+        <EditText
+            android:id="@+id/text_view_longitude"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="0dp"
+            android:text="Location"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>
+
+        <Button
         android:id="@+id/button_edit_flower"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
